package org.example.src.entities;

public class Patient {
}
